--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
     <div class="project">
-      <img src="img/scratch.png" alt="Loading screen for scratch game">
+      <img src="img/Screenshot 2023-02-03 123850.png" alt="Loading screen for scratch game">
       <h2>Scratch Horror Game</h2>
       <p><a href="https://scratch.mit.edu/projects/721842351">horrorquiz.project</a>
       </p>
