--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
     <div class="project">
-      <img src="img/Screenshot 2023-02-03 123850.png" alt="Loading screen for scratch game">
+      <img src="img/Screenshot_2023-02-03_123850.png" alt="Loading screen for scratch game">
       <h2>Scratch Horror Game</h2>
       <p><a href="https://scratch.mit.edu/projects/721842351">horrorquiz.project</a>
       </p>
@@ -63,9 +63,32 @@
       </p>
       <div class="clear"></div>
       <!-- end of project template -->
-    </div>
 
-  </div>
+      <div class="project">
+        <img src="img/currency converter pic.png" alt="Currency Converter Intro">
+        <h2>Currency Converter AP Create Task</h2>
+        <p><a href="https://replit.com/@Zoe-Gordon/AP-Create-Task-Currency-Converter">currencyconverter.project</a>
+        </p>
+        <p>The purpose of the currency converter is to help its user convert easily from differnet country's currency,
+          for instance from USD to AUS or CAD to JPY.
+
+        <div class="project">
+          <iframe width="767" height="575" src="https://www.youtube.com/embed/X_AkT3mriWk"
+            title="Gordon, Zoe Quantum Computing in Electric Cars mp4" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+          <h2>Genius Hour Semester 2: Quantum Computing in Electric Cars</h2>
+          <p><a href="https://youtu.be/X_AkT3mriWk">geniushour.video</a>
+          </p>
+          <p>This is a video of my semester 2 genius hour where I researched quantum computing in electric cars.
+
+          </p>
+          <div class="clear"></div>
+        </div>
+
+      </div>
+
+    </div>
 
 </body>
 
